# insurance-claims-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
infrastructure/: template.yaml
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  adjudication.py  claims_intake.py  fraud_detection.py  supervisor.py
src/tools/: __init__.py  claims_db.py  fraud_scorer.py  policy_validator.py
tests/: __init__.py  test_claims_intake.py
